[project]
name = "ml-cookbook"
version = "0.1.0"
description = "Collection of Jupyter notebooks implementing programs from Machine Learning with Python Cookbook."
authors = [
    { name = "Vipin Kumar", email = "krvipin15@tutamail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandavro>=1.9.0",
    "pyarrow>=22.0.0",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.44",
]
